Fixed header z-index

--- a/client/src/app/shared/header/header.component.scss
+++ b/client/src/app/shared/header/header.component.scss
@@ -14,6 +14,7 @@
     padding: 29px;
     width: 100%;
     box-sizing: border-box;
+    z-index: 1;
 }
 
 .logo-container {
